* Tue Dec 21 2021 Infra Team <infra@dolden.net> - 3.3.2-1
- Upgrade to 3.3.2
- From https://github.com/coreruleset/coreruleset/releases/tag/v3.3.2

* Tue Jan 20 2015 Infra Team <infra@dolden.net> - 3.3.2-0.1
- Update to 2.2.8

* Mon May 28 2012 Infra Team <infra@dolden.net> - 2.2.4-1
- Created from scratch