@@ -1,4 +1,4 @@
 <IfModule mod_security2.c>
     Include modsecurity.d/crs-setup.conf
-    Include modsecurity.d/rules/*.conf
+    Include modsecurity.d/activated_rules/*.conf
 </IfModule>
